--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Skylands
-version: ${project.version}
+version: ${pluginVersion}
 main: me.lokkee.skylands.Skylands
 api-version: 1.17
 author: LOKKEE
-description: ${project.description}
+description: Skylands is an upcoming open-source System, with all sorts of RPG related functionalities.
