Made database tables and plugin.yml being set up automatically, further expanded the Npc System and made the foundation of npc packets using the dependency packetevents

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-jdbcUrl=jdbc:mysql://localhost:3306/skylandsdb
-username=root
-password=
+jdbcUrl=jdbc:mysql://domain:port/database
+username=username
+password=password
